Removed unwanted employee management project